--- a/src/user/AddActivity/style.css
+++ b/src/user/AddActivity/style.css
@@ -32,7 +32,7 @@
   justify-content: center;
 }
 
-.content > .middle, .content > .right{
+.content > .left, .content > .leftmiddle, .content > .rightmiddle, .content > .right{
   width: auto;
   margin: 20px;
   width: 30%;
